src/objects/Service_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Area2__c</fullName>
        <formula>IF(CONTAINS(Locality__r.Name, &quot;Locality&quot;) , Locality__r.Parent.Name , 
IF(CONTAINS(Locality__r.Name,&quot;Area&quot;), Locality__r.Name, 
IF(CONTAINS(Locality__r.Name, &quot;Local Service Office&quot;), Locality__r.Parent.Parent.Name, &quot;&quot;) 
))</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <controllingField>Country_Region__c</controllingField>
            <picklistValues>
                <fullName>Central West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Anglia and Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North and East Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South and West Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bid which the contract is based upon</description>
        <label>Bid</label>
        <referenceTo>Bid__c</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commissioning_Body__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissioning body</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contracts (Commissioning body)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Risk__c</fullName>
        <description>Please assign a risk level to the contract as per guidance from Service Management.

High - First time applied for or uncertainty over renewal
Medium - Contract Due for renewal
Low - Contract not due for renewal
N/A - Not Applicable</description>
        <inlineHelpText>Please refer to definitions for Renewal Risk and and Assign a Risk Level</inlineHelpText>
        <label>Renewal Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_administrator__c</fullName>
        <inlineHelpText>Email address of the person who administrates this contract (deals with invoicing etc)</inlineHelpText>
        <label>zzdel_Contract administrator</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_administrator_internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract administrator (internal)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_paperwork_received__c</fullName>
        <label>Contract paperwork received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Region2__c</fullName>
        <formula>IF( CONTAINS(Locality__r.Name, &quot;Area&quot;) , Locality__r.Parent.Name , IF(CONTAINS(Locality__r.Name,&quot;Region&quot;), 
Locality__r.Name, 
IF (CONTAINS(Locality__r.Name,&quot;Locality&quot;), Locality__r.Parent.Parent.Name, 
IF (CONTAINS(Locality__r.Name,&quot;Local Service Office&quot;), Locality__r.Parent.Parent.Parent.Name, &quot;&quot;) 
)))</formula>
        <label>Country/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <label>Country/Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <inlineHelpText>Date contract ends or by which grant finishes in the form dd/mm/yyyy</inlineHelpText>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funder_name__c</fullName>
        <label>Funder name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder_type__c</fullName>
        <label>Funder type</label>
        <picklist>
            <picklistValues>
                <fullName>Local authority social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local authority other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary care trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Social Care Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHS other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint PCT/social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Health Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lottery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_agreement_code__c</fullName>
        <label>Funding agreement code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locality or Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <infoMessage>Select an Alzheimer&apos;s Society office.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contracts (Locality)</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrated_to_BDCS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the contract has been migrated to the new BDCS application</description>
        <inlineHelpText>Tick this box if this Contract has been migrated and entered into the new BDCS application. In that case only the new BDCS record will be included in the Contract Risk Report so as to avoid duplication of data.</inlineHelpText>
        <label>Migrated to BDCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_funder_type__c</fullName>
        <label>Other funder type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_requirements_for_funders__c</fullName>
        <inlineHelpText>This is for area use only and may include notes on when reports are required.</inlineHelpText>
        <label>Reporting requirements for funders</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Restricted_income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unrestricted income is any income from statutory contracts, or donations that have been received for general purposes, not defined by the donor. Restricted income is from donations given for a specified purpose by the donor, so almost all grants will be restricted income. If in doubt check with your regional accountant.</description>
        <label>Restricted income?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_date__c</fullName>
        <inlineHelpText>In the form dd/mm/yyyy (if no other date agreed set this for six months before end of contract )</inlineHelpText>
        <label>Review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Services__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Society_contribution__c</fullName>
        <inlineHelpText>How much is the Society contributing to the cost of this service from local or central funds eg possibly for matched funding? If all costs are covered by the agreement record this as zero. Amount in £.</inlineHelpText>
        <label>Society contribution (£)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <inlineHelpText>First date contract came into effect or date grant can first be accessed in the form dd/mm/yyyy</inlineHelpText>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Considering application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied for</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, awaiting contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired (but replaced)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <inlineHelpText>Overall length of the agreement in years and months eg 2yrs 3 mths</inlineHelpText>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_FCR_Amount__c</fullName>
        <label>Total FCR Amount</label>
        <summarizedField>Contract_Cost__c.FCR__c</summarizedField>
        <summaryForeignKey>Contract_Cost__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_central_overheads_costs__c</fullName>
        <inlineHelpText>Costs incurred from area or central service budgets needed to support the delivery of the services (for example service manager costs). Give the total over the term of the agreement. Estimates are fine but note your assumptions in the comments field.</inlineHelpText>
        <label>Total central overheads costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_local_overhead_costs__c</fullName>
        <inlineHelpText>Costs incurred from local budgets that are needed to support the delivery of the services, e.g.  locality manager time costs etc.) Please give the total over the term of the agreement. Estimates are fine but note your assumptions in the comments field.</inlineHelpText>
        <label>Total local overhead costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_value_of_agreement2__c</fullName>
        <inlineHelpText>Total value of agreement in £ over the complete term (estimated total value in the case of spot contracts)</inlineHelpText>
        <label>Total Cost (inc. FCR)</label>
        <summarizedField>Contract_Cost__c.Cost__c</summarizedField>
        <summaryForeignKey>Contract_Cost__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_value_of_agreement__c</fullName>
        <inlineHelpText>Total value of agreement in £ over the complete term (estimated total value in the case of spot contracts)</inlineHelpText>
        <label>Total value of agreement (un-calc&apos;d)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_funding_agreement__c</fullName>
        <label>Type of funding agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Block contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_should_be_included__c</fullName>
        <label>VAT should be included?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lookup_cost_centre__c</fullName>
        <formula>Locality__r.COst_Centre__c</formula>
        <label>Cost Centre</label>
        <type>Text</type>
    </fields>
    <label>Service Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Name__c</columns>
        <columns>Bid__c</columns>
        <columns>Commissioning_Body__c</columns>
        <columns>Funder_name__c</columns>
        <columns>Total_value_of_agreement2__c</columns>
        <columns>Country_Region2__c</columns>
        <columns>Area2__c</columns>
        <columns>Migrated_to_BDCS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Contract_Name__c</columns>
        <columns>Bid__c</columns>
        <columns>Commissioning_Body__c</columns>
        <columns>Funder_name__c</columns>
        <columns>Total_value_of_agreement2__c</columns>
        <columns>Country_Region2__c</columns>
        <columns>Area2__c</columns>
        <filterScope>Everything</filterScope>
        <label>By Created Date</label>
    </listViews>
    <listViews>
        <fullName>Migrated_to_BDCS</fullName>
        <columns>NAME</columns>
        <columns>Contract_Name__c</columns>
        <columns>Bid__c</columns>
        <columns>Commissioning_Body__c</columns>
        <columns>Funder_name__c</columns>
        <columns>Total_value_of_agreement2__c</columns>
        <columns>Country_Region__c</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migrated_to_BDCS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Migrated to BDCS</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <recordTypes>
        <fullName>ServiceContract_Rec</fullName>
        <active>true</active>
        <label>ServiceContract_Rec</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Correct_Review_Date</fullName>
        <active>true</active>
        <description>Contract&apos;s &apos;review date&apos; is not after the &apos;end date&apos; or before &apos;start date&apos;</description>
        <errorConditionFormula>(Review_date__c &gt;  End_date__c)  || (Review_date__c &lt;  Start_date__c)</errorConditionFormula>
        <errorMessage>The contract&apos;s review date must be before its end date and after its start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_before_end_date</fullName>
        <active>true</active>
        <description>Service Contract&apos;s start date must be before its end date</description>
        <errorConditionFormula>Start_date__c &gt;  End_date__c</errorConditionFormula>
        <errorMessage>Contract&apos;s start date must be before its end date.</errorMessage>
    </validationRules>
</CustomObject>